# claude-code-log

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  codemcp.toml  justfile  pyproject.toml  test_converter.py  test_date_filtering.py  test_filtering.py  test_new_features.py  test_path_conversion.py
.claude/: settings.json  settings.json.bak
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  claude_code.yml  docs.yml
claude_code_log/: cache.py  cli.py  converter.py  models.py  parser.py  renderer.py  tui.py  utils.py
claude_code_log/templates/: index.html  transcript.html
claude_code_log/templates/components/: filter_styles.css  global_styles.css  message_styles.css  project_card_styles.css  search.html  search_inline.html  search_inline_script.html  search_results_panel.html  search_styles.css  session_nav.html  session_nav_styles.css  timeline.html  timeline_styles.css  timezone_converter.js  todo_styles.css
claude_logbook/: cli.py  converter.py
docs/cache/: 057f45a2-5fa5-421f-a665-8ad7b66ba376.json  078d4af7-499e-4c8b-b3e2-5d4c301d436a.json  07f2e15c-a38b-454b-9148-60edc06de401.json  099e8272-3fdd-4c78-9bad-d06e3d86c4cd.json  0a6f56b8-d18c-4fba-ab82-369e9b11b339.json  0ca402b9-a179-4018-9e5c-ad6e974633d6.json  0d3a8e6f-290f-4105-a327-a2496e5e2a83.json  0eba2db6-b66d-40b6-a5b1-30a3e6ffee56.json  11250327-31b5-42fd-94b1-84c91090e1fc.json  12a546d1-83a7-49a6-abba-5400db340b43.json  1767af99-cb03-45a0-a56e-e53aefabc084.json  1c6c5d32-e008-4bf0-a33c-27b8a1f31db0.json  1c90426b-1def-498c-8f42-58d90c644055.json  1e943400-6880-4db0-8a3c-c4cdeb3ecf7e.json  204d2722-a981-4940-a666-52e695fb32e6.json  20c93d4a-df96-4b03-9124-a1b9d476b29f.json  2130f986-d03a-49b4-a46b-d28f0f0f9909.json  227c98ff-9a6f-4325-81e6-38616bf825dc.json  260b0374-913f-4477-86ea-a229a98be443.json  2616daa7-39c8-4bc3-a82e-d05eafd535ee.json  2934a2ea-db67-4b2d-8991-a39057ef774a.json  2b25646e-0d29-4405-b672-4f45c71c1fb0.json  2e2fc9fe-2c80-4902-8b66-f5aacb06205a.json  2f5b4461-b1de-414e-ab21-5f96fd0db9d6.json  326189cf-5676-4237-8cde-1ce80aae4a9f.json  37f83ec9-f2ea-42a9-925e-0d5c105cb6e8.json  3a55cb70-2bd3-4b89-9c38-c15fb63c9c55.json  3c5fec79-f025-4e29-8551-97edcd59c469.json  3d5f63c6-868d-4c25-8469-85b6d82e10d5.json  3f74f7a0-a067-4820-a50a-61440d2565a1.json  40f8af00-d071-46a6-8682-dd2aaf944ee3.json  4464a89c-6585-4681-b4ce-7fe396cc9b45.json  4466dd71-c710-4233-8bcd-81eb0e7dab7b.json  44d61ff3-1bcf-482b-890b-16111253c8b6.json  44dfe01a-c8c0-418f-b610-3d144dfbd84e.json  4784c51c-06c8-4765-88a3-4b381d8877a7.json  489f991c-df48-4f8f-bc97-0e1f733511fe.json  4d119ba9-0880-4b8b-a1bd-2ca2b7311553.json  4e062ed2-cbfa-4cb8-bc9a-1551bf168eaf.json  4e27c414-a885-46a0-b5c8-d58e1417377d.json  (+64 more)
scripts/: generate_style_guide.py
scripts/style_guide_output/: index.html  index_style_guide.html  transcript_style_guide.html
test/: README.md  conftest.py  test_ansi_colors.py  test_bash_rendering.py  test_cache.py  test_cache_integration.py  test_combined_transcript_link.py  test_command_handling.py  test_context_command.py  test_converter.py  test_date_filtering.py  test_filtering.py  test_html_regeneration.py  test_index_timezone.py  test_markdown_rendering.py  test_message_filtering.py  test_message_types.py  test_new_features.py  test_path_conversion.py  test_project_display_name.py  test_project_matching.py  test_query_params_browser.py  test_template_data.py  test_template_rendering.py  test_template_utils.py  test_timeline_browser.py  test_todowrite_rendering.py  test_toggle_functionality.py  test_tool_result_image_rendering.py  test_tui.py  test_tui_expansion.py  test_utils.py
test/test_data/: combined_transcripts.html  edge_cases.html  edge_cases.jsonl  representative_messages.html  representative_messages.jsonl  session_b.jsonl  sidechain.jsonl  system_model_change.jsonl  todowrite_examples.jsonl
test/test_data/cache/: edge_cases.json  index.json  representative_messages.json  session_b.json  sidechain.json  system_model_change.json  todowrite_examples.json
