[project]
name = "claude-code-log"
version = "0.1.0"
description = "Convert Claude transcript JSONL files to HTML"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.0.0",
    "dateparser>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
claude-code-log = "claude_code_log.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
# Pyright configuration with strict settings
include = ["claude_code_log"]
exclude = ["**/__pycache__", "dist"]
stubPath = "stubs"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateImportUsage = true
reportUntypedFunctionDecorator = true
reportFunctionMemberAccess = true
reportIncompatibleMethodOverride = true

[tool.ruff]
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.2",
    "pytest-xdist>=3.6.1",
    "pyright>=1.1.350",
]
